--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -2,24 +2,26 @@
 CXX = g++
 CXXFLAGS = -Wall -Wextra --pedantic -Werror -std=c++17 -O3 -I./
 
+EXE = standalone_binary
+
 DIRS := ./ ./functions/
 SRCS := $(wildcard $(addsuffix *.cpp, $(DIRS)))
 OBJS := $(patsubst %.cpp,%.o,$(SRCS))
 FUNC := $(wildcard $(addsuffix *.hpp, functions/))
-FTXT := $(patsubst %,#include "%"\n,$(wildcard $(addsuffix *.hpp, functions/)))
+FTXT := $(patsubst %,\n#include "%",$(wildcard $(addsuffix *.hpp, functions/)))
 
 .PHONY: all clean
 
-all: main
+all: $(EXE)
 
 clean:
-	rm -f $(OBJS) main
+	rm -f $(OBJS) $(EXE)
 
-main: functions.hpp $(OBJS)
-	$(CXX) $(CXXFLAGS) -o $@ $^
+$(EXE): functions.hpp $(OBJS)
+	$(CXX) $(CXXFLAGS) -o $@ $(OBJS)
 
 functions.hpp: $(FUNC)
-	echo ' $(FTXT)' > $@
+	@echo '#pragma once $(FTXT)' | awk '{print $$1 " " $$2}' > $@
 
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
