fix compile errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,8 @@
 		"ctime": "cpp",
 		"iomanip": "cpp",
 		"bitset": "cpp",
-		"regex": "cpp"
+		"regex": "cpp",
+		"complex": "cpp",
+		"cstring": "cpp"
 	}
 }
