Add more functions, and fix some bugs

--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -33,5 +33,8 @@ functions.hpp: $(FUNC)
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
+functions/sort.o: functions/sort.cpp functions/sort.hpp
+	$(CXX) $(CXXFLAGS) -Wno-maybe-uninitialized -c $< -o $@
+
 %.o: %.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
