Add basic layout for opcodes

--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -4,7 +4,7 @@ CXXFLAGS = -Wall -Wextra --pedantic -Werror -std=c++17 -Ofast -I./
 
 EXE = standalone_binary
 
-DIRS := ./ ./functions/
+DIRS := ./ ./functions/ ./actions/
 SRCS := $(wildcard $(addsuffix *.cpp, $(DIRS)))
 OBJS := $(patsubst %.cpp,%.o,$(SRCS))
 FUNC := $(wildcard $(addsuffix *.hpp, functions/))
@@ -21,14 +21,14 @@ clean:
 $(EXE): functions.hpp $(OBJS)
 	$(CXX) $(CXXFLAGS) -o $@ $(OBJS) -lcrypto
 
-functions.hpp: $(FUNC)
-	@echo '#pragma once' > $@
-	@echo '$(FTXT)' |  awk '{print $$1 " " $$2 }' | sed 's/^ $$//g' >> $@
-	@echo '\ntypedef void (*Function)(Context &);' >> $@
-	@echo 'const Function FUNCTIONS[] = {' >> $@
-	@grep ',$$' ../../compiler/functions/codes.lua | awk '{print "\t" $$1 ","}' | sed -E 's/\b(bool|delete|union|char)\b/_\1/g' >> $@
-	@echo '};' >> $@
-	@echo 'const int FUNCTION_COUNT = sizeof(FUNCTIONS) / sizeof(Function);\n' >> $@
+# functions.hpp: $(FUNC)
+# 	@echo '#pragma once' > $@
+# 	@echo '$(FTXT)' |  awk '{print $$1 " " $$2 }' | sed 's/^ $$//g' >> $@
+# 	@echo '\ntypedef void (*Function)(Context &);' >> $@
+# 	@echo 'const Function FUNCTIONS[] = {' >> $@
+# 	@grep ',$$' ../../compiler/functions/codes.lua | awk '{print "\t" $$1 ","}' | sed -E 's/\b(bool|delete|union|char)\b/_\1/g' >> $@
+# 	@echo '};' >> $@
+# 	@echo 'const int FUNCTION_COUNT = sizeof(FUNCTIONS) / sizeof(Function);\n' >> $@
 
 main.o: main.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
