--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -31,5 +31,8 @@ main.o: main.cpp
 functions/%.o: functions/%.cpp functions/%.hpp
 	$(CXX) $(CXXFLAGS) -Wno-maybe-uninitialized -c $< -o $@
 
+actions/pop_catch_or_throw.o: actions/pop_catch_or_throw.cpp actions/pop_catch_or_throw.hpp
+	$(CXX) $(CXXFLAGS) -Wno-maybe-uninitialized -c $< -o $@
+
 %.o: %.cpp %.hpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
