--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,14 @@
 		"regex": "cpp",
 		"complex": "cpp",
 		"cstring": "cpp",
-		"cinttypes": "cpp"
+		"cinttypes": "cpp",
+		"charconv": "cpp",
+		"chrono": "cpp",
+		"ratio": "cpp",
+		"format": "cpp",
+		"semaphore": "cpp",
+		"span": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp"
 	}
 }
