Add option to allow pre-compiling the C++ runtime without any paisley program

--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -11,9 +11,11 @@ FUNC := $(wildcard $(addsuffix *.hpp, functions/))
 FTXT := $(patsubst %,\n#include "%",$(wildcard $(addsuffix *.hpp, functions/)))
 FNAM := $(patsubst functions/%.hpp,%,$(wildcard $(addsuffix *.hpp, functions/)))
 
-.PHONY: all clean
+.PHONY: all clean objects
 
 all: $(EXE)
+
+objects: $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(EXE)
