--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,8 @@
 		"semaphore": "cpp",
 		"span": "cpp",
 		"stop_token": "cpp",
-		"thread": "cpp"
+		"thread": "cpp",
+		"codecvt": "cpp",
+		"fstream": "cpp"
 	}
 }
