Add precompile script to check if c++ implementations exist for all functions

--- a/src/libs/cpp/makefile
+++ b/src/libs/cpp/makefile
@@ -11,9 +11,12 @@ FUNC := $(wildcard $(addsuffix *.hpp, functions/))
 FTXT := $(patsubst %,\n#include "%",$(wildcard $(addsuffix *.hpp, functions/)))
 FNAM := $(patsubst functions/%.hpp,%,$(wildcard $(addsuffix *.hpp, functions/)))
 
-.PHONY: all clean objects
+.PHONY: all clean objects verify
 
-all: $(EXE)
+all: verify $(EXE)
+
+verify: verify_cpp_parity.sh
+	./$^
 
 objects: $(OBJS)
 
